--- a/main.yaml
+++ b/main.yaml
@@ -1,6 +1,6 @@
 - name: configure  {{ component }}
   become: yes
-  hosts: {{ component }}
+  hosts: "{{ component }}"
   roles:
-  -  {{ component }}
+  -  "{{ component }}"
   
