--- a/inventory.ini
+++ b/inventory.ini
@@ -18,3 +18,7 @@ shipping.dev1407.site
 rabbitmq.dev1407.site
 [payment]
 payment.dev1407.site
+
+[all:vars]
+ansible_user=ec2-user
+ansible_password=DevOps321
