--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -30,7 +30,14 @@
   ansible.builtin.shell: mongosh --host mongodb.daws84s.site < /app/db/master-data.js
   when: catalogue_output.stdout | int < 0
 
-- name: system setup
+- name: systemd setup
   include_role:
     name: common
     tasks_from: systemd.yaml
+
+- name: Deployment
+  tags: 
+  - deployment
+  import_role:
+    name: common
+    tasks_from: deployment
