--- a/roles/frontend/vars/main.yaml
+++ b/roles/frontend/vars/main.yaml
@@ -2,3 +2,4 @@ CATALOGUE_HOST: catalogue.dev1407.site
 USER_HOST: user.dev1407.site
 CART_HOST: cart.dev1407.site
 SHIPPING_HOST: shipping.dev1407.site
+PAYMENT_HOST: payment.dev1407.site
