--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -34,3 +34,10 @@
   include_role:
     name: common
     tasks_from: systemd.yaml
+
+- name: app deployment
+  tags:
+  - deployment
+  include_role:
+    name: common
+    tasks_from: deployment
