--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -26,6 +26,7 @@
 - name: print catalogue output
   ansible.builtin.debug:
     msg: "{{ catalogue_output }}"
+    ignore_errors: true
 
 - name: load products
   ansible.builtin.shell: mongosh --host mongodb.dev1407.site < /app/db/master-data.js
