--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -22,16 +22,19 @@
   ansible.builtin.command: mongosh --host mongodb.dev1407.site --eval 'db.getMongo().getDBNames().indexOf("catalogue")'
   register: catalogue_output
   ignore_errors: true
+  ignore_unreachable: true
 
 - name: print catalogue output
   ansible.builtin.debug:
     msg: "{{ catalogue_output }}"
     ignore_errors: true
+    ignore_unreachable: true
 
 - name: load products
   ansible.builtin.shell: mongosh --host mongodb.dev1407.site < /app/db/master-data.js
   when: catalogue_output.stdout | int < 0
   ignore_errors: true
+  ignore_unreachable: true
 
 - name: systemd setup
   include_role:
