--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -42,8 +42,8 @@
     tasks_from: systemd.yaml
 
 - name: app deployment
-  tags:
-  - deployment
+  # tags:
+  # - deployment
   include_role:
     name: common
     tasks_from: deployment
