--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -11,4 +11,4 @@
 
 
 - name: setp root password
-  ansible.builtin.command: mysql_secure_installation --set-root-pass {{ MYSQL_ROOT_PASSWORD }}
+  ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ MYSQL_ROOT_PASSWORD }}"
