--- a/main.yaml
+++ b/main.yaml
@@ -1,7 +1,7 @@
 - name: configure {{ component }}
   become: yes
-  hosts: "{{ component }}"
-  vars_files:
-  - vault/mysql.yaml
+  #hosts: "{{ component }}"
+  hosts: localhost
+  connection: local
   roles:              #loads data in current working directory
   - "{{ component }}"
