--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -41,9 +41,9 @@
     name: common
     tasks_from: systemd.yaml
 
-- name: app deployment
-  tags:
-  - deployment
-  import_role:
-    name: common
-    tasks_from: deployment
+# - name: app deployment
+#   tags:
+#   - deployment
+#   import_role:
+#     name: common
+#     tasks_from: deployment
